# calcnumpp

./: CMakeLists.txt  README.adoc  main.cpp
include/: bisec.hpp  constants.hpp  error.hpp  euler.hpp  fixed_point.hpp  integration.hpp  interpolation.hpp  intervals.hpp  matrix.hpp  newton.hpp  ode.hpp  polynomial.hpp  statistics.hpp  utils.hpp
test/: bisec.cpp  convergency.cpp  euler.cpp  fixed_point.cpp  integration.cpp  interpolation.cpp  intervals.cpp  kahan.cpp  matrix.cpp  newton.cpp  polynomial.cpp  utils.cpp
